--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </head>
 
 <body>
-    <header class="header position-fixed ">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+    <header class="header  ">
+        <nav class="navbar navbar-expand-lg navbar-light header__lg">
             <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav flex-column navbar__list">
+                <ul class="navbar-nav flex-column navbar__list ">
                     <li
                         class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
@@ -66,24 +66,73 @@
                         </a>
                     </li>
                 </ul>
+
             </div>
         </nav>
+        <nav class="navbar navbar-expand-lg  navbar-dark header__md header__navbar">
+            <div class="container">
+                <h1 class="text-uppercase title__h1 ">
+                </h1>
+
+                <button class="navbar-toggler navbar__button " type="button" data-toggle="collapse"
+                    data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse  " id="collapsibleNavbar">
+                <ul class="navbar-nav  navbar__list-md">
+                    <li class=" ">
+                        <i class="fas fa-home"></i>
+                        <a class="  " href="index.html">
+                            <h2>HOME</h2> </span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <i class="fas fa-user "></i>
+                        <a class="" href="about.html">
+                            <h2>ABOUT</h2>
+                        </a>
+                    </li>
+                    <li class="navbar__item-md--active ">
+                        <i class="fas fa-briefcase"></i>
+                        <a class="" href="fortfolio.html">
+                            <h2>FORTFOLIO</h2>
+                        </a>
+                    </li>
+                    <li class="">
+                        <i class="fas fa-envelope-open"></i>
+                        <a class=" " href="contact.html">
+                            <h2>CONTACT</h2>
+                        </a>
+                    </li>
+
+                    <li class="">
+                        <i class="fas fa-comments"></i>
+                        <a class="  " href="blog.html">
+                            <h2>BLOG</h2>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     </header>
     <main class="main">
         <section class="container-fluid   h-100 d-flex align-items-lg-center home__container">
             <div class="position-fixed  d-none d-lg-block home__color"></div>
             <div class="row h-100 my-auto d-md-flex justify-content-center justify-content-lg-start">
-                <div class="col-lg-4 col-md-5 col-sm-5 col-5 ml-lg-5 my-auto">
-                    <div class="home__img mx-auto ">
+                <div class="col-lg-4  col-sm-4 col-5 mx-lg-5 my-auto">
+                    <div class="    home__img mx-auto ">
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-12 ml-lg-5 my-auto text-center ">
+                <div class="col-lg-6 col-sm-9 col-12 ml-xl-4 my-auto  ">
                     <div class="home__content">
-                        <h1 class="home__title text-uppercase display-3 display-sm-4 font-weight-bold">
+                        <h1 class="home__title text-uppercase display-3  font-weight-bold mb-lg-4 mb-md-2">
                             i'm pham duc viet. <br> <span class="display-4 font-weight-bold">front end
                                 developer</span>
                         </h1>
-                        <p class="home__desc">
+                        <p class="home__desc  ">
                             I'm a Viet Nam based front‑end developer focused on crafting clean & user‑friendly
                             experiences, I am
                             passionate about building excellent software that improves the lives of those around me.
