--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,16 @@
 </head>
 
 <body>
-    <header class="header position-fixed ">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+    <header class="header  ">
+        <nav class="navbar navbar-expand-lg navbar-light header__lg">
             <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav flex-column navbar__list">
+                <ul class="navbar-nav flex-column navbar__list ">
                     <li
-                        class="nav__item active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
                         <a class="nav__link  position-relative " href="index.html">
                             <h2>HOME</h2> </span>
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li
-                        class="nav__item nav__item-active d-flex align-items-lg-center justify-content-lg-center   position-relative  rounded-circle mb-4">
+                        class="nav__item d-flex align-items-lg-center justify-content-lg-center   position-relative  rounded-circle mb-4">
                         <i class="fas fa-envelope-open"></i>
                         <a class="nav__link  position-relative" href="contact.html">
                             <h2>CONTACT</h2>
@@ -66,14 +66,64 @@
                         </a>
                     </li>
                 </ul>
+
             </div>
         </nav>
+        <nav class="navbar navbar-expand-lg  navbar-dark header__md header__navbar">
+            <div class="container">
+                <h1 class="text-uppercase title__h1 ">
+                    get in <span>touch</span>
+                </h1>
+
+                <button class="navbar-toggler navbar__button " type="button" data-toggle="collapse"
+                    data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse  " id="collapsibleNavbar">
+                <ul class="navbar-nav  navbar__list-md">
+                    <li class=" ">
+                        <i class="fas fa-home"></i>
+                        <a class="  " href="index.html">
+                            <h2>HOME</h2> </span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <i class="fas fa-user "></i>
+                        <a class="" href="about.html">
+                            <h2>ABOUT</h2>
+                        </a>
+                    </li>
+                    <li class=" ">
+                        <i class="fas fa-briefcase"></i>
+                        <a class="" href="fortfolio.html">
+                            <h2>FORTFOLIO</h2>
+                        </a>
+                    </li>
+                    <li class="navbar__item-md--active">
+                        <i class="fas fa-envelope-open"></i>
+                        <a class=" " href="contact.html">
+                            <h2>CONTACT</h2>
+                        </a>
+                    </li>
+
+                    <li class="">
+                        <i class="fas fa-comments"></i>
+                        <a class="  " href="blog.html">
+                            <h2>BLOG</h2>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     </header>
     <main class="main">
         <div class="contact">
             <section class="contact__title">
                 <div class="title position-relative text-center h-25">
-                    <h1 class="text-uppercase ">
+                    <h1 class="text-uppercase title__h1">
                         get in <span>touch</span>
                     </h1>
                     <span class="position-absolute  text-uppercase text-center display-1 title-bg">
@@ -84,38 +134,52 @@
             <section class="contact__container">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 col-md-12">
+                        <div class="col-xl-4 col-lg-12">
                             <div class="contact__info">
-                                <div class="info__title mb-4 ">
-                                    <h3 class="text-uppercase ">don't be shy !</h3>
-                                </div>
-                                <p class="info__desc mb-4">Feel free to get in touch with me. I am always open to
-                                    discussing
-                                    new projects, creative ideas or opportunities to be part of your visions.</p>
-                                <div class="d-flex  mb-5 info__email">
-                                    <i class="fas fa-envelope-open mr-4 "></i>
-                                    <div>
-                                        <span class="text-uppercase d-block">Mail me</span>
-                                        <span>steve@gmail.com</span>
+                                <div class="row">
+                                    <div class="col-xl-12 col-lg-6 col-md-12">
+                                        <div class="info__title mb-4 ">
+                                            <h3 class="text-uppercase ">don't be shy !</h3>
+                                        </div>
+                                        <p class="info__desc mb-4">Feel free to get in touch with me. I am always open
+                                            to
+                                            discussing
+                                            new projects, creative ideas or opportunities to be part of your visions.
+                                        </p>
                                     </div>
-                                </div>
-                                <div class="d-flex mb-4 info__phone">
-                                    <i class="fas fa-phone-square-alt mr-4"></i>
-                                    <div>
-                                        <span class="text-uppercase d-block ">call me</span>
-                                        <span>+216 21 184 010</span>
+                                    <div class="col-xl-12 col-lg-6 col-md-12">
+                                        <div class="d-flex  mb-5 info__email">
+                                            <i class="fas fa-envelope-open mr-4 "></i>
+                                            <div>
+                                                <span class="text-uppercase d-block">Mail me</span>
+                                                <span>steve@gmail.com</span>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex mb-4 info__phone">
+                                            <i class="fas fa-phone-square-alt mr-4"></i>
+                                            <div>
+                                                <span class="text-uppercase d-block ">call me</span>
+                                                <span>+216 21 184 010</span>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="col-xl-12 col-lg-6 col-md-12">
+                                        <ul class="contact__social d-flex pl-0 ">
+                                            <li><i class="fab fa-facebook-f"></i></li>
+                                            <li><i class="fab fa-twitter"></i></li>
+                                            <li><i class="fab fa-youtube"></i></li>
+                                            <li><i class="fab fa-dribbble"></i></li>
+                                        </ul>
+                                    </div>
+
+
+
+
                                 </div>
-                                <ul class="contact__social d-flex pl-0 ">
-                                    <li><i class="fab fa-facebook-f"></i></li>
-                                    <li><i class="fab fa-twitter"></i></li>
-                                    <li><i class="fab fa-youtube"></i></li>
-                                    <li><i class="fab fa-dribbble"></i></li>
-                                </ul>
                             </div>
                             <div class="contact__form"></div>
                         </div>
-                        <div class=" col-lg-8 col-md-12">
+                        <div class=" col-xl-8 col-lg-12">
                             <div class="contact__form">
                                 <form action="#">
                                     <div class="row">
