--- a/fortfolio.html
+++ b/fortfolio.html
@@ -21,16 +21,17 @@
 </head>
 
 <body>
-    <header class="header position-fixed ">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+    <header class="header  ">
+        <nav class="navbar navbar-expand-lg navbar-light  header__lg">
+
             <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav flex-column navbar__list">
+                <ul class="navbar-nav flex-column navbar__list ">
                     <li
-                        class="nav__item active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
                         <a class="nav__link  position-relative " href="index.html">
                             <h2>HOME</h2> </span>
@@ -44,7 +45,7 @@
                         </a>
                     </li>
                     <li
-                        class="nav__item nav__item-active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-briefcase"></i>
                         <a class="nav__link position-relative" href="fortfolio.html">
                             <h2>FORTFOLIO</h2>
@@ -66,14 +67,65 @@
                         </a>
                     </li>
                 </ul>
+
             </div>
         </nav>
+        <nav class="navbar navbar-expand-lg  navbar-dark header__md header__navbar">
+            <div class="container ">
+                <h1 class="text-uppercase title__h1 ">
+                    my <span>fortfolio</span>
+                </h1>
+
+                <button class="navbar-toggler navbar__button " type="button" data-toggle="collapse"
+                    data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse  " id="collapsibleNavbar">
+                <ul class="navbar-nav  navbar__list-md">
+                    <li class=" ">
+                        <i class="fas fa-home"></i>
+                        <a class="  " href="index.html">
+                            <h2>HOME</h2> </span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <i class="fas fa-user "></i>
+                        <a class="" href="about.html">
+                            <h2>ABOUT</h2>
+                        </a>
+                    </li>
+                    <li class="navbar__item-md--active ">
+                        <i class="fas fa-briefcase"></i>
+                        <a class="" href="fortfolio.html">
+                            <h2>FORTFOLIO</h2>
+                        </a>
+                    </li>
+                    <li class="">
+                        <i class="fas fa-envelope-open"></i>
+                        <a class=" " href="contact.html">
+                            <h2>CONTACT</h2>
+                        </a>
+                    </li>
+
+                    <li class="">
+                        <i class="fas fa-comments"></i>
+                        <a class="  " href="blog.html">
+                            <h2>BLOG</h2>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
     </header>
+
     <main class="main">
         <div class="fortfolio">
             <section class="about__title">
                 <div class="title position-relative text-center h-25">
-                    <h1 class="text-uppercase ">
+                    <h1 class="text-uppercase title__h1 ">
                         my <span>fortfolio</span>
                     </h1>
                     <span class="position-absolute  text-uppercase text-center display-1 title-bg">
@@ -334,7 +386,7 @@
         </div>
         </div>
         </div>
-        <div class="setting">
+        <div class="setting ">
             <i class="fas fa-cog"></i>
         </div>
     </main>
