fix responsive modal

--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
                     </li>
 
                     <li class="navbar__item-md--active">
-                        <i class="fas fa-comments"></i>
+                        <i class="fas fa-comments navbar__item-md--active"></i>
                         <a class="  " href="blog.html">
                             <h2>BLOG</h2>
                         </a>
