--- a/fortfolio.html
+++ b/fortfolio.html
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li class="navbar__item-md--active ">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-briefcase navbar__item-md--active"></i>
                         <a class="" href="fortfolio.html">
                             <h2>FORTFOLIO</h2>
                         </a>
@@ -245,7 +245,7 @@
                             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner ">
                                     <div class="carousel-item active ">
-                                        <div class="fortfolio-model__item w-50 mx-auto">
+                                        <div class="fortfolio-model__item  mx-auto">
                                             <div class="fortfolio-model__content">
                                                 <div class="fortfolio-model__title">
                                                     <h3 class="text-uppercase text-center">image project</h3>
@@ -286,7 +286,7 @@
 
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="fortfolio-model__item w-50 mx-auto">
+                                        <div class="fortfolio-model__item  mx-auto">
                                             <div class="fortfolio-model__content">
                                                 <div class="fortfolio-model__title">
                                                     <h3 class="text-uppercase text-center">image project</h3>
@@ -326,7 +326,7 @@
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="fortfolio-model__item w-50 mx-auto">
+                                        <div class="fortfolio-model__item  mx-auto">
                                             <div class="fortfolio-model__content">
                                                 <div class="fortfolio-model__title">
                                                     <h3 class="text-uppercase text-center">image project</h3>
