--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li class="navbar__item-md--active">
-                        <i class="fas fa-user navbar__item-md--active"></i>
+                        <i class="fas fa-user "></i>
                         <a class="" href="about.html">
                             <h2>ABOUT</h2>
                         </a>
