--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="navbar__item-md--active">
-                        <i class="fas fa-envelope-open navbar__item-md--active"></i>
+                        <i class="fas fa-envelope-open "></i>
                         <a class=" " href="contact.html">
                             <h2>CONTACT</h2>
                         </a>
