--- a/fortfolio.html
+++ b/fortfolio.html
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li class="navbar__item-md--active ">
-                        <i class="fas fa-briefcase navbar__item-md--active"></i>
+                        <i class="fas fa-briefcase "></i>
                         <a class="" href="fortfolio.html">
                             <h2>FORTFOLIO</h2>
                         </a>
