--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-column navbar__list ">
                     <li
-                        class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item  active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
                         <a class="nav__link  position-relative " href="index.html">
                             <h2>HOME</h2> </span>
@@ -59,7 +59,7 @@
                     </li>
 
                     <li
-                        class="nav__item d-flex align-items-lg-center justify-content-lg-center position-relative  rounded-circle mb-4">
+                        class="nav__item nav__item-active  d-flex align-items-lg-center justify-content-lg-center position-relative  rounded-circle mb-4">
                         <i class="fas fa-comments"></i>
                         <a class="nav__link  position-relative " href="blog.html">
                             <h2>BLOG</h2>
