--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-column navbar__list ">
                     <li
-                        class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item  d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
                         <a class="nav__link  position-relative " href="index.html">
                             <h2>HOME</h2> </span>
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li
-                        class="nav__item d-flex align-items-lg-center justify-content-lg-center   position-relative  rounded-circle mb-4">
+                        class="nav__item nav__item-active  d-flex align-items-lg-center justify-content-lg-center   position-relative  rounded-circle mb-4">
                         <i class="fas fa-envelope-open"></i>
                         <a class="nav__link  position-relative" href="contact.html">
                             <h2>CONTACT</h2>
