--- a/fortfolio.html
+++ b/fortfolio.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav flex-column navbar__list ">
                     <li
-                        class="nav__item nav__item-active active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-home"></i>
                         <a class="nav__link  position-relative " href="index.html">
                             <h2>HOME</h2> </span>
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li
-                        class="nav__item d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
+                        class="nav__item nav__item-active d-flex align-items-lg-center justify-content-lg-center  position-relative  rounded-circle mb-4">
                         <i class="fas fa-briefcase"></i>
                         <a class="nav__link position-relative" href="fortfolio.html">
                             <h2>FORTFOLIO</h2>
